--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
+<header>
+<nav>
+    <ul>
+        <li class=""</li>
+        <li class=""></li>
+        <li class=""></li>
+        <li class=""></li>
+    </ul>
+</nav>
+</header>
+<main>
     <h2>Dit is een andere titel, die gaat niet over Pim</h2>
+
+
+</main>
 </body>
 </html>
