--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
 </header>
 <main>
     <h2>Dit is een andere titel, die gaat niet over Pim</h2>
-
+<article>
+    <h2> leuke weetjes</h2>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>one</li>
+        <li>two</li>
+        <li></li>
+    </ul>
+    <p></p>
+</article>
 
 </main>
+<footer>
+    copyright
+</footer>
 </body>
 </html>
